# ticker-classifier

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml  pyversions.yml  ruff-check.yml
src/: constants.py  main.py  main2.py  test.py
tests/: test_sample.py
ticker_classifier/: __init__.py  classifier.py  constants.py
ticker_classifier/apis/: coingecko.py  yahoo.py
ticker_classifier/db/: cache.py
