[project]
name = "ticker_classifier"
version = "0.1.0"
description = "A robust stock, crypto, and forex classifier with async support."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Stephan Akkerman", email = "stephan@akkerman.ai" },
]
dependencies = [
    "requests",
    "aiohttp"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ticker_classifier*"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"

[tool.ruff]
line-length = 88
#select = ["I001"]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "numpy"
